# nyc-transit-demand-forecasting

./: .env.example  .gitignore  CLAUDE.md  README.md  mlflow.db  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml  docker_publish.yml  pipeline_ingestion.yml  pipeline_monitoring.yml  pipeline_prediction.yml  pipeline_training.yml
.streamlit/: config.toml
data/gold/: mta_ml.parquet.dvc  mta_sarima.parquet.dvc
data/silver/: mta_weather_merged.parquet.dvc
docker/: Dockerfile.dashboard  Dockerfile.pipeline
notebooks/: eda_ml_model.ipynb  eda_sarimax.ipynb  explorations.ipynb
pipelines/: run_ingestion.py  run_monitoring.py  run_prediction.py  run_training.py
scripts/: backfill_mta.py  backfill_weather.py  check_accuracy.py  rebuild_silver.py  validate_backfill.py
src/: config.py
src/01_data_ingestion/: merge_mta_weather.py  upload_mta_data.py
src/01_ingestion/: merge_mta_weather.py  upload_mta_data.py  upload_weather_data.py
src/02_transformation/: preprocess_sarima.py  transform_silver.py
src/03_model_training/: baseline_sarima.py  baseline_sarima_1.py  sarimax_autotuning.py  train_sarimax.py
src/dashboard/: app.py
src/evaluation/: drift_detector.py  evaluate_models.py  walk_forward.py
src/ingestion/: ingest_events.py  ingest_mta.py  ingest_weather.py  merge_silver.py
src/monitoring/: monitor_performance.py
src/prediction/: generate_forecast.py
src/training/: train_sarimax.py  train_xgboost.py
src/transformation/: preprocess_ml.py  preprocess_sarima.py
src/utils/: config.py  features.py  (+5 more)
tests/: conftest.py
(+14 files in other folders)
